--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="logo-container">
+        <a href="/" class="logo" aria-label="return back to home">03</a>
+      </div>
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#about">About</a></li>
+          <li class="nav-item"><a href="#projects">Projects</a></li>
+          <li class="nav-item"><a href="#resume">Resume</a></li>
+          <li class="nav-item"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+  </body>
 </html>
