--- a/src/template.html
+++ b/src/template.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="nav">
       <div class="logo-container">
         <a href="/" class="logo" aria-label="return back to home">03</a>
       </div>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="#about">About</a></li>
-          <li class="nav-item"><a href="#projects">Projects</a></li>
-          <li class="nav-item"><a href="#resume">Resume</a></li>
-          <li class="nav-item"><a href="#contact">Contact</a></li>
-        </ul>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="#about">About</a></li>
+        <li class="nav-item"><a href="#projects">Projects</a></li>
+        <li class="nav-item"><a href="#resume">Resume</a></li>
+        <li class="nav-item"><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </body>
 </html>
