feat: add responsive navigation and main content styling
- Add local Snell Roundhand font from assets/Snell Roundhand W01 Script.woff2
- Implement responsive navigation with flex-wrap and clamp() sizing
- Style main header with full viewport height and centered content
- Add responsive typography for name and portfolio elements

--- a/src/template.html
+++ b/src/template.html
@@ -23,5 +23,11 @@
         <li class="nav-item"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <main class="main">
+        <header class="header">
+            <h1 class="name">Roqeeb Olaniyi</h1>
+            <h2 class="portfolio">Portfolio</h2>
+        </header>
+    </main>
   </body>
 </html>
